# physicsnemo-cfd

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci-precommit.yml  ci-tests.yml  mq-blossom-faker.yml
docs/: conf.py  index.rst
docs/_static/css/: custom.css
docs/_templates/autosummary/: class.rst
docs/modules/: evaluation_benchmarks.rst  evaluation_common.rst  evaluation_config.rst  evaluation_datasets.rst  evaluation_inference.rst  evaluation_metrics.rst  evaluation_nims.rst  evaluation_reports.rst  hybrid_init.rst  index.rst  postprocessing_tools.rst
physicsnemo/cfd/: __init__.py
physicsnemo/cfd/evaluation/: __init__.py  config.py
physicsnemo/cfd/hybrid_initialization_tools/: __init__.py  create_combined_vtu.py  flowfield.py  main.py  merge_and_write_mesh.py
physicsnemo/cfd/postprocessing_tools/: __init__.py  metric_registry.py
test/ci_tests/: header_check.py  test_aggregate_volume_bounds.py  test_benchmark_workflow.py  test_distributed_utils.py  test_domino_volume_canonical_mapping.py  test_evaluation.py  test_hexbin_projection.py  test_inference_domain_routing.py  test_inference_seed.py  test_l2_errors.py  test_metrics_cache.py  test_model_assets.py  test_run_id_from_case_id.py
workflows/bench_example/: generate_surface_benchmarks.py  generate_volume_benchmarks.py  utils.py
workflows/bench_example/notebooks/: surface_benchmarking.ipynb
workflows/benchmarking/: .gitignore  README.md  main.py  setup.sh
workflows/benchmarking/conf/: config_matrix_surface_custom.yaml  config_matrix_surface_hf.yaml  config_matrix_volume_custom.yaml  config_matrix_volume_hf.yaml
workflows/benchmarking/notebooks/: adding_a_new_dataset.ipynb  adding_a_new_metric.ipynb  adding_a_new_model.ipynb  (+3 more)
workflows/domino_design_sensitivities/: design_datapipe.py  main.py  requirements.txt
workflows/hybrid_initialization_example/: README.md  make_hybrid_initialization.py  prepare_domino_assets.py  utils.py
workflows/nim_inference/: README.md
(+104 files in other folders)
