[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nvidia-physicsnemo-cfd"
authors = [
  { name="NVIDIA PhysicsNeMo Team"},
]
description = "A library to use PhysicsNeMo models for engineering and CFD workflows"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "httpx>=0.27.0",
    "hydra-core>=1.3.0",
    "pyyaml>=6.0",
    "numpy>=1.22.4",
    "pyvista>=0.45.2",
    "tqdm>=4.67.1",
    "numba>=0.59.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.0",
    "torch-geometric>=2.5.0",
    "matplotlib>=3.10.0",
    "trimesh>=4.6.9",
    "fast-simplification>=0.1.12",
    # Temporary git pin: tracks NVIDIA/physicsnemo main while it stabilizes toward 2.1.0.
    # This SHA contains the ``wp.Device`` migration (upstream dropped ``wp.context``) and GeoTransolver bug fix.
    # Revert to ``nvidia-physicsnemo>=2.1.0`` from PyPI once 2.1.0 ships.
    "nvidia-physicsnemo @ git+https://github.com/NVIDIA/physicsnemo.git@70701e18f0cff9a67572830189649c467c8164ce",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
# Hugging Face Hub + fsspec for ``hf://`` / ``s3://`` model packages (see evaluation.assets.Package)
evaluation-hf = [
    "huggingface_hub>=0.23.0",
    "fsspec>=2024.1.0",
    "filelock>=3.13.0",
]
# dependencies for GPU-accelerated functionality
gpu = [
    "cupy-cuda13x>=13.6.0",
    "cuml-cu13>=25.10.0",
    "warp-lang>=1.11.1",
]
all = [
    "nvidia-physicsnemo-cfd[dev,gpu,evaluation-hf]",
]
docs = [
    "sphinx>=6.0.0",
    "myst-parser>=0.18.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "sphinx-design",
    "sphinx-togglebutton>=0.3.0",
    "sphinx-favicon>=1.0.1",
    "nvidia-sphinx-theme",
]

[tool.setuptools.dynamic]
version = {attr = "physicsnemo.cfd.__version__"}

[tool.setuptools.packages.find]
include = ["physicsnemo.*"]
